2010-10-11  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] If writing to stderr in ISR fails, exit failurefully.

	* b-isr.c (werr): Don't bother to ‘write’ zero-len strings;
	also, if ‘write’ rv is unexpected, call ‘PROGRAM (exiterr)’.

2010-10-11  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Use literal string for ‘PERR’, ‘MERR’ first arg.

	* co.c (rmworkfile): Rework ‘PERR (COND-EXPRESSION, ...)’ as
	‘if (COND-EXPRESSION) PERR (STR1, ...) else PERR (STR2, ...)’.
	* rcskeep.c (sorry): Use "%s" for ‘MERR’ first arg.

2010-10-11  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Presume availability of ‘mkstemp’.

	* b-feph.c [!HAVE_MKSTEMP] (homegrown_mkstemp): Delete func.
	[!HAVE_MKSTEMP] (mkstemp): Delete #define.

2010-10-09  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Use ‘fd_safer’ more.

	* b-feph.c: #include "unistd-safer.h".
	(jam_sff): Use ‘fd_safer’ for ‘msktemp’ rv.

2010-10-09  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[C] Avoid signed/unsigned comparison.

	* b-divvy.c (make_space): Use ‘size_t’ for "type width".

2010-10-09  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[C] Add ‘const’ to ‘struct pool_found’ member ‘sym’.

	* base.h (struct pool_found): Add ‘const’ to member ‘sym’.
	* b-anchor.c (pool_lookup): Add ‘const’ to cast.

2010-10-09  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[C] Drop redundant local-var declarations.

	* b-fro.c (string_from_atat): Drop redundant decl for ‘i’.
	* b-grok.c (full): Likewise for ‘count’.

2010-10-08  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Fix bug: Look for and use <siginfo.h>.

	Regression introduced 2010-04-03, "Ignore <siginfo.h>".
	* b-isr.c: [HAVE_SIGINFO_H] #include <siginfo.h>.

2010-10-08  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Add abstraction: maybe_reset_sigchld

	* b-isr.c (maybe_reset_sigchld): New func.
	* b-isr.h (maybe_reset_sigchld): New func decl.
	* rcsfnms.c: #include "b-isr.h".
	[!HAVE_GETCWD] (getcwd): Use ‘maybe_reset_sigchld’.
	* rcsutil.c (runv): Use ‘maybe_reset_sigchld’.
